# gide-search

./: .gitignore  Dockerfile  Makefile  README.md  data_model.md  pyproject.toml  thumbnail_notes.md
.github/workflows/: ci.yml
docs/: README.md  api-usage.md  elasticsearch-troubleshooting.md  setup-notes.md
resources/rocrate/example-target-detached-rocrate/: ro-crate-metadata.json
resources/rocrate/example-target-detached-rocrate-v0.1/: ro-crate-metadata.json
resources/rocrate/example-target-detached-rocrate-v0.2/: EXAMPLE-001-ro-crate-metadata.json  gide-search-context.jsonld  profile.md  ro-crate-metadata.json
resources/rocrate/example-template/: README.md  ro-crate-metadata.json
resources/search/: example_search_entry.json
src/gide_search/: __init__.py  api.py  cli.py  indexer.py  schema.py
src/gide_search/search/: __init__.py  api.py  indexer.py  schema_search_object.py
src/gide_search/static/: app.js  index.html  style.css
src/gide_search/transformers/: __init__.py  bia.py  bia_to_rocrate.py  frame_transformer.py  idr.py  rocrate.py  rocrate_to_index.py  ssbd.py  to_rocrate.py
src/gide_search/utils/: fetch_ro_crate.py  ontology_term_finder.py
src/gide_search_v2/: __init__.py  cli.py  schema_search_object.py
src/gide_search_v2/search/: api.py  indexer.py  schema_search_object.py
src/gide_search_v2/transformers/: __init__.py  base_transformer.py  bia_to_rocrate.py  frame_transformer.py  rocrate_to_index.py  to_rocrate.py
tests/: conftest.py  test_api.py  test_bia_transformer.py  test_idr_transformer.py  test_index.py  test_index_transformer.py  test_rocrate_transformer.py  test_ssbd_transformer.py
(+13 files in other folders)
