[project]
name = "gide-search"
version = "0.1.0"
description = "Unified search system for biological imaging databases (IDR, SSBD, BioImage Archive)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.127.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "rdflib>=7.5.0",
    "typer>=0.21.0",
    "uvicorn>=0.40.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gide_search"]

[project.scripts]
gide-search = "gide_search.cli:main"
