[project]
name = "gide-search"
version = "0.1.0"
description = "Unified search system for biological imaging databases (IDR, SSBD, BioImage Archive)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.127.1",
    "httpx>=0.28.1",
    "ols-client>=0.2.1",
    "pydantic>=2.12.5",
    "pyld>=2.0.4",
    "rdflib>=7.5.0",
    "requests>=2.32.5",
    "rocrate>=0.14.2",
    "tqdm>=4.67.1",
    "typer>=0.21.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.35.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gide_search"]

[project.scripts]
gide-search-v1 = "gide_search.cli:main"
gide-search = "gide_search_v2.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
